[gd_scene load_steps=19 format=3 uid="uid://7v7tbapy5kyg"]

[ext_resource type="Script" path="res://modules/characters/player/player.gd" id="1_83bp2"]
[ext_resource type="Resource" uid="uid://cq7ye0ptoqdqn" path="res://modules/characters/player/player_stats.tres" id="2_be3m8"]
[ext_resource type="Resource" uid="uid://d28eu0e8hlhr7" path="res://modules/characters/player/player_utilities.tres" id="3_6rti1"]
[ext_resource type="PackedScene" uid="uid://deblu3dukpv2r" path="res://modules/state_machine/state_machine.tscn" id="4_twu7o"]
[ext_resource type="Script" path="res://modules/characters/player/states/player_idle.gd" id="5_slfjc"]
[ext_resource type="Script" path="res://modules/characters/player/states/player_move.gd" id="6_sdv7x"]
[ext_resource type="Script" path="res://modules/characters/player/states/player_combat.gd" id="7_p3p7f"]
[ext_resource type="Script" path="res://modules/characters/player/states/player_reflecting.gd" id="8_rkp5y"]
[ext_resource type="Script" path="res://modules/characters/player/states/player_executing_actions.gd" id="9_hhoor"]
[ext_resource type="PackedScene" path="res://modules/characters/player/actions/combat_action.tscn" id="10_3bgmd"]
[ext_resource type="Script" path="res://modules/characters/player/actions/use_utility.gd" id="11_y4j04"]
[ext_resource type="PackedScene" uid="uid://jk0yenufpt3y" path="res://modules/targeting/utility_selector/utility_selector.tscn" id="12_3j75s"]
[ext_resource type="Script" path="res://modules/characters/player/actions/heal_action.gd" id="12_5hnox"]
[ext_resource type="PackedScene" uid="uid://7nfyom0wjf4b" path="res://modules/characters/player/actions/dash_attack.tscn" id="13_k87f8"]
[ext_resource type="PackedScene" uid="uid://cjylxrxyexj0d" path="res://modules/hurtbox/hurtbox.tscn" id="15_dkfnl"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_gxlei"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n18ew"]
size = Vector2(16, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_18yi3"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 38
motion_mode = 1
script = ExtResource("1_83bp2")
stats = ExtResource("2_be3m8")
utilities = ExtResource("3_6rti1")

[node name="Sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = SubResource("PlaceholderTexture2D_gxlei")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_n18ew")

[node name="StateMachine" parent="." instance=ExtResource("4_twu7o")]
initial_state = NodePath("PlayerMove")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("5_slfjc")

[node name="PlayerMove" type="Node" parent="StateMachine"]
script = ExtResource("6_sdv7x")

[node name="PlayerCombat" type="Node" parent="StateMachine/PlayerMove"]
script = ExtResource("7_p3p7f")

[node name="PlayerReflecting" type="Node" parent="StateMachine/PlayerMove/PlayerCombat"]
script = ExtResource("8_rkp5y")

[node name="PlayerExecutingActions" type="Node" parent="StateMachine"]
script = ExtResource("9_hhoor")

[node name="Actions" type="Node" parent="."]

[node name="UseUtility" parent="Actions" instance=ExtResource("10_3bgmd")]
script = ExtResource("11_y4j04")
UtilitySelector = ExtResource("12_3j75s")

[node name="HealAction" parent="Actions" instance=ExtResource("10_3bgmd")]
script = ExtResource("12_5hnox")

[node name="DashAttack" parent="Actions" instance=ExtResource("13_k87f8")]

[node name="Hurtbox" parent="." instance=ExtResource("15_dkfnl")]
collision_mask = 8

[node name="Collision" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_18yi3")

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="InteractRay" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(20, 0)
collision_mask = 64

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]

[editable path="Hurtbox"]
